# graph-rag-poc

./: .env.poc  .env.poc.example  .gitignore  README.md  interactive-graph.html  main.ipynb  pyproject.toml  requirements.txt
core/: graph.py  prompt.py  utils.py
dataset/: chunks.jsonl  chunks.pkl  extracted-entities.jsonl  extracted-kg.jsonl  extracted_kg.jsonl  news-articles-raw.jsonl  raw-article-paragraph-chunks.jsonl
development/: create-graph-db.py  extract-chunk-corpus.py  extract-kg-parallel.py  extract-kg.py  raw-corpus-chunking.py  raw-corpus-entity-extraction.py  viz-graph.py
